--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^12.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "sanity": "^5.9.0",
     "styled-components": "^6.3.9"
   },
