--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@portabletext/react": "^6.0.2",
     "@sanity/image-url": "^2.0.3",
     "@sanity/vision": "^5.9.0",
+    "lenis": "^1.3.17",
     "next": "16.1.6",
     "next-sanity": "^12.1.0",
     "react": "19.2.3",
