--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@portabletext/react": "^6.0.2",
     "@sanity/image-url": "^2.0.3",
     "@sanity/vision": "^5.9.0",
@@ -17,9 +18,13 @@
     "next-sanity": "^12.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "resend": "^6.9.2",
     "sanity": "^5.9.0",
-    "styled-components": "^6.3.9"
+    "sonner": "^2.0.7",
+    "styled-components": "^6.3.9",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
